package swen2.tp.swen2_tp_hw.viewmodel;

public class SearchBarViewModel {
}
