@startuml
'https://plantuml.com/class-diagram

class AddTourViewModel
class ListMenuViewModel
class SearchBarViewModel
class TourListViewModel
class MainWindowModel

class TourService

class TourRepository

TourListViewModel <|-- TourService
AddTourViewModel <|-- TourService

TourService <|-- TourRepository

@enduml